# Dattatypes

./: CMakeLists.txt  DevNotes.md  LICENCE  README.md
cmake/: Config.cmake.in
include/: dattatypes.hpp  debug.hpp  enum_flags.hpp  internal_ptr.hpp  prec.hpp  prec_utils.hpp  unit.hpp  unlock_map.hpp
scripts/: setup.sh  test_setup.sh
src/: enum_flags.cpp  enum_utils.cpp  internal_ptr.cpp  main.cpp  prec.cpp  unlock_map.cpp
tests/: CMakeLists.txt  tests_main.cpp
tests/src/: enum_flags.cpp  internal_ptr.cpp  prec.cpp  test_main.cpp  unit.cpp  unlock_map.cpp
